fix content overflow on home admin

--- a/themes/timtec/static/css/less/admin.less
+++ b/themes/timtec/static/css/less/admin.less
@@ -9,7 +9,7 @@
   // HOME
   // ********************************************************************* //
   .home.wrapper-bg {
-      overflow: hidden;
+      overflow: visible;
   }
 
   #home {
